1.8 stuff